crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__all_must_occur_with_group_alternatives.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo<'a> {
    #[atom(CssAtomSet::Legacy)]
    Legacy(crate::KeywordValue<'a, ::css_parse::T![Ident]>),
    #[parse(all_must_occur)]
    LegacyLeft(
        #[atom(CssAtomSet::Legacy)]
        crate::KeywordValue<'a, ::css_parse::T![Ident]>,
        #[atom(CssAtomSet::Left)]
        crate::KeywordValue<'a, ::css_parse::T![Ident]>,
    ),
    #[parse(all_must_occur)]
    LegacyRight(
        #[atom(CssAtomSet::Legacy)]
        crate::KeywordValue<'a, ::css_parse::T![Ident]>,
        #[atom(CssAtomSet::Right)]
        crate::KeywordValue<'a, ::css_parse::T![Ident]>,
    ),
    #[parse(all_must_occur)]
    LegacyCenter(
        #[atom(CssAtomSet::Legacy)]
        crate::KeywordValue<'a, ::css_parse::T![Ident]>,
        #[atom(CssAtomSet::Center)]
        crate::KeywordValue<'a, ::css_parse::T![Ident]>,
    ),
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
