crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__alternatives_with_checks_derive_parse.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[repr(C, u8)]
enum Foo<'a> {
    #[atom(CssAtomSet::Bar)]
    Bar(::css_parse::T![Ident]),
    Angle(Option<crate::CalcableValue<'a, crate::Ranged<crate::Angle, -90i32, 90i32>>>),
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
