crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__auto_or_fixed_multiplier.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
struct Foo<'a>(
    pub crate::AutoOr<
        (crate::Value<'a, crate::Color<'a>>, crate::Value<'a, crate::Color<'a>>),
    >,
);
