crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__auto_or_none.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse, Visitable)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo<'a> {
    #[cfg_attr(feature = "visitable", visit(skip))]
    #[atom(CssAtomSet::Auto)]
    Auto(crate::KeywordValue<'a, ::css_parse::T![Ident]>),
    #[cfg_attr(feature = "visitable", visit(skip))]
    #[atom(CssAtomSet::None)]
    None(crate::KeywordValue<'a, ::css_parse::T![Ident]>),
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
