crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__auto_or_none_or_type.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C)]
struct Foo<'a>(pub crate::AutoNoneOr<crate::CalcableValue<'a, crate::Length>>);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
