crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__bg_image.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C)]
struct Foo<'a>(pub crate::Value<'a, crate::BgImage<'a>>);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
